--- a/app/views/dice_templates/roll.html.erb
+++ b/app/views/dice_templates/roll.html.erb
@@ -1,4 +1,9 @@
 <h1><%=params.fetch("number_of_dice")%>d<%=params.fetch("how_many_sides")%></h1>
 
 <ul>
+  <% @rolls.each do |a_roll| %>
+    <li>
+      <%= a_roll %>
+    </li>
+  <% end %>
 </ul>
